[gd_scene load_steps=5 format=2]

[ext_resource path="res://Roboto.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Splash.png" type="Texture" id=3]
[ext_resource path="res://Objects/EnvParticles.tscn" type="PackedScene" id=4]

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="Roboto" type="Sprite" parent="."]
position = Vector2( 348, -5 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Splash" type="Sprite" parent="."]
position = Vector2( -242, -125 )
scale = Vector2( 0.356481, 0.356481 )
texture = ExtResource( 3 )

[node name="Play" type="Button" parent="."]
margin_left = -466.0
margin_right = -328.0
margin_bottom = 35.0
rect_scale = Vector2( 3, 3 )
text = "Play"

[node name="Quit" type="Button" parent="."]
margin_left = -466.0
margin_top = 132.0
margin_right = -328.0
margin_bottom = 167.0
rect_scale = Vector2( 3, 3 )
text = "Quit"

[node name="EnvParticles" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -6 )
emission_rect_extents = Vector2( 1000, 500 )

[node name="HowToPlay" type="Button" parent="."]
visible = false
margin_left = -607.0
margin_top = -330.0
margin_right = 1.0
margin_bottom = -36.0
rect_scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="HowToPlay"]
margin_right = 608.0
margin_bottom = 294.0
text = "Welcome!
A new parasite is spreading under the seas of Uglyland, they make everything
look like it has been drawn by a kid on paint.

You have been assigned the task to control a bot underwater and kill as much parasite as
you can

Every action you do requires energy.
Oh! We've setup a RegEnergy platform on the North-West region for you to charge yourself.
Don't thank us, it was vital for the success of the mission.

On the far-west you have a shop were you can exchange gold to upgrade your GlouGlouBot

Use WASD/ZQSD to move
Use Left-Click to shoot energy

Click on this mission report to accept it"

[node name="Button" type="Button" parent="HowToPlay"]
margin_left = 264.0
margin_top = 303.0
margin_right = 345.0
margin_bottom = 334.0
text = "Back"

[connection signal="button_up" from="Play" to="." method="_on_Play_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_Quit_button_up"]
[connection signal="button_up" from="HowToPlay" to="." method="_on_HowToPlay_button_up"]
[connection signal="button_up" from="HowToPlay/Button" to="." method="_on_Button_button_up"]
